17794
```scala
package test

object Test extends App {
  import scala.reflect.runtime.universe._
  val q"$x" = Ident(TermName("x"))
  println(showRaw(x))
}
```
```scala
13:14 ~/Projects/Kepler_typemacros/sandbox (paradise/macros)$ scalac Test.scala 
Test.scala:5: error: not found: value $quasiquote$matcher$0d8fd6872f8e4cd294913ad6bf3e59d8
  val q"$x" = Ident(TermName("x"))
      ^
one error found
```
